--- a/package.json
+++ b/package.json
@@ -9,10 +9,12 @@
     "ios": "react-native run-ios"
   },
   "dependencies": {
+    "@react-native-community/async-storage": "^1.6.1",
     "d3-shape": "^1.3.5",
     "react": "16.8.6",
     "react-native": "0.60.5",
     "react-native-config": "^0.11.7",
+    "react-native-router-flux": "^4.0.6",
     "react-native-svg": "^9.7.1",
     "react-redux": "^7.1.1",
     "redux": "^4.0.4",
